tests/NormalTests/paczka1/small_fuzzy/55265208.err
Error in line 1: A368 A368 94,2
Error in line 7: A368 S810 77,1
Error in line 9: wlDCHZTIST A321 76,1
